fixed form overflow on lower resolutions

--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ img{
 
 #main{
     background-color: white;
-    height: 90vh;
-    width: 70vw;
+    height: 840px;
+    width: 1344px;
     margin-top: 4vh;
     border-radius: 15px;
     display: flex;
